# Word-Calendar-Generator

./: .gitignore  LICENSE  README.md  cal_gen.py  config.cfg  csv_gen.py  pyproject.toml  settings.py
word_calendar/: cal_gen.py  main.py
word_calendar_2/: calendarHandler.py  config.yaml  docxHandler.py  gui.py  gui_style.tcss  main.py
