[tool.poetry]
name = "word-calendar-generator"
version = "0.1.0"
description = ""
authors = ["aaron f.a <featurecrater@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ical = "^7.0.0"
recurring-ical-events = "^2.1.2"
Gooey = "^1.0.8.1"
python-docx = "^1.1.0"
pandas = "^2.2.1"
textual = "^0.52.1"
reportlab = "^4.1.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
